--- a/qmd/_08_documentation.qmd
+++ b/qmd/_08_documentation.qmd
@@ -1,3 +1,62 @@
+<!-- ## Documentation
+
+* Docstrings / Roxygen should be structured similarly
+* Quarto!
+* GitHub Pages
+* Standardized approach to READMEs
+* Robust explanations within GitHub Issues and PRs (should feel like hand-holding)
+    + This can be hard in a fast-paced environment with tight deadlines, but it will *save* you time in the long run (assuming you're actually taking the time to review)
+* Mermaidjs
+
+- Docstrings / Roxygen
+- GitHub Workflow (SDLC)
+- `README` standardization -->
+
+## Documentation
+
+![](www/dont-forget.png)
+
+::: {.notes}
+
+- PSA: Please document your functions! I know it's easy to forget to do and just "get the job done" and "save the documentation for later", but I'm going to let you in on a little secret -- "later" doesn't exist; it never happens. In the infamous words of Shaia Lebouf, DO IT, and do it while you're writing the function.
+- And we can extend this idea of common frameworks across R and Python to our documentation processes as well, starting with functions we write within our code.
+
+:::
+
+## Documentation: Function Documentation Syntax {transition="none-out"}
+
+::: {.columns}
+::: {.column}
+
+```{.r}
+round_up <- function(x, dig) {
+    f <- 10 ** dig
+    out <- ceiling(x * f) / f
+    return(out)
+}
+```
+
+:::
+
+::: {.column}
+
+```{.python}
+def round_up(x, dig):
+    f = 10 ** dig
+    out = np.ceil(x * f) / f
+    return out
+```
+
+:::
+:::
+
+::: {.notes}
+
+- Consider this simple function that rounds a number to a certain number of digits and forces it to round up.
+- The syntax is strikingly similar across both R and Python, but the point here is going to be around the documentation of the function.
+
+:::
+
 ## Documentation: Function Documentation Syntax {transition="none"}
 
 ::: {.columns}
