Lots of updates

--- a/qmd/_05_how_empathy_manifests.qmd
+++ b/qmd/_05_how_empathy_manifests.qmd
@@ -1,6 +1,13 @@
-## How Empathy Manifests *Technically*
+## How Empathy Manifests *Technically* {transition="none"}
 
 <br>
+
+::: {.notes}
+
+- I'm going to focus on *technical* things you can do that are empathetic towards others on your team, and I'm going to break it down into three areas
+- < read slide >
+
+:::
 
 . . .
 
@@ -16,8 +23,12 @@
 
 📝 Documentation
 
+## How Empathy Manifests *Technically* {transition="none"}
+
+![](www/pillars-3.png)
+
 ::: {.notes}
 
-- I'm going to focus on *technical* things you can do that are empathetic towards others on your team < read slide >
+- And I like to think of these as the three *pillars* of technical empathy, and we'll revisit this "pillar" concept throughout this presentation
 
 :::
